# mcp-gateway

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: docker-build.yml
app/: config.py  main.py
app/api/: auth.py  logs.py  mcp_servers.py  mcp_tools.py  router.py  system.py
app/core/: aggregator.py  client_pool.py  gateway_server.py  github_manager.py  log_collector.py  process_manager.py  scheduler.py
app/db/: crud.py  engine.py  models.py
app/schemas/: common.py  mcp_server.py
app/utils/: detector.py  namespace.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts  mcp.ts
frontend/src/components/: AddServerDialog.vue
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  mcp.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  Login.vue  ServerDetail.vue  ServerList.vue  Settings.vue
